# Turtlebot4-VLN

./: README.md  action_success_photo.py  pipline
take_photo/: README.md
take_photo/pc_server/depthai_examples/: CMakeLists.txt  package.xml
take_photo/pc_server/depthai_examples/include/depthai_examples/: photo_save_node.hpp
take_photo/pc_server/depthai_examples/launch/: photo_save.launch.py
take_photo/pc_server/depthai_examples/src/: photo_save_node.cpp
take_photo/pc_server/depthai_ros_msgs/: CMakeLists.txt
take_photo/turtlebot4/depthai_examples/: CMakeLists.txt  package.xml
take_photo/turtlebot4/depthai_examples/launch/: photo_capture.launch.py
take_photo/turtlebot4/depthai_examples/src/: photo_capture_node.cpp  photo_save_node.cpp
take_photo/turtlebot4/install/: local_setup.sh  setup.sh
